--- a/mines/index.html
+++ b/mines/index.html
@@ -345,7 +345,7 @@ iframe{
         </div>
             <span id="contador" style="display: none;">60</span>
             <button id="generate-opportunity" class="generate-opportunity" onclick="delayedClick()">Identificar sinais</button>
-            <a href="https://afiliados.mmabet.com/visit/?bta=38014&nci=5343" target="_blank" rel="noopener noreferrer"><button id="cadastro" class="cadastro">Fazer cadastro</button></a>
+            <a href="https://demo.spribe.io/launch/mines?currency=BRL&lang=PT-BR&return_url=https://spribe.co/games" target="_blank" rel="noopener noreferrer"><button id="cadastro" class="cadastro">Fazer cadastro</button></a>
         </div>
         <div id="game-wrapper" class="game-wrapper">
             <div id="board" class="board"></div>
@@ -460,7 +460,7 @@ document.addEventListener("DOMContentLoaded", () => {
 				</div>
 				<div class="elementor-element elementor-element-db504fa elementor-widget__width-initial elementor-widget-mobile__width-inherit elementor-widget elementor-widget-html" data-id="db504fa" data-element_type="widget" data-widget_type="html.default">
 				<div class="elementor-widget-container">
-			<iframe id="link-game" style="height: 550px; border-radius: 12px; box-shadow: 0px 0px 18px 2px black;" src="https://afiliados.mmabet.com/visit/?bta=38014&nci=5343"></iframe>		</div>
+			<iframe id="link-game" style="height: 550px; border-radius: 12px; box-shadow: 0px 0px 18px 2px black;" src="https://demo.spribe.io/launch/mines?currency=BRL&lang=PT-BR&return_url=https://spribe.co/games"></iframe>		</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-1bcd2bb elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="1bcd2bb" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
@@ -478,7 +478,7 @@ document.addEventListener("DOMContentLoaded", () => {
 								<div class="elementor-element elementor-element-d167117 elementor-align-left elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="d167117" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://afiliados.mmabet.com/visit/?bta=38014&nci=5343" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="https://demo.spribe.io/launch/mines?currency=BRL&lang=PT-BR&return_url=https://spribe.co/games" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 							<span class="elementor-button-icon elementor-align-icon-right">
 				<i aria-hidden="true" class="fas fa-external-link-alt"></i>			</span>
