--- a/fortune-mouse/index.html
+++ b/fortune-mouse/index.html
@@ -428,7 +428,7 @@ generateRandomcampo();
 <div class="elementor-widget-wrap elementor-element-populated">
 			<div class="elementor-element elementor-element-8001bfe elementor-widget elementor-widget-html" data-id="8001bfe" data-element_type="widget" data-widget_type="html.default">
 <div class="elementor-widget-container">
-<iframe style="height: 600px; border-radius: 12px;" src="https://afiliados.mmabet.com/visit/?bta=38014&nci=5343"></iframe>
+<iframe style="height: 600px; border-radius: 12px;" src="https://m.pgsoft-games.com/68/index.html?ot=82b8b0f88e17ae53611e6dd7f167bc38&btt=2&__refer=m.pg-redirect.com&or=static.pgsoft-games.com#amp=1"></iframe>
 
 </div>
 </div>
@@ -448,7 +448,7 @@ generateRandomcampo();
 			<div class="elementor-element elementor-element-9c90a69 elementor-align-left elementor-mobile-align-right elementor-widget elementor-widget-button" data-id="9c90a69" data-element_type="widget" data-widget_type="button.default">
 <div class="elementor-widget-container">
 <div class="elementor-button-wrapper">
-<a href="https://afiliados.mmabet.com/visit/?bta=38014&nci=5343" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+<a href="https://m.pgsoft-games.com/68/index.html?ot=82b8b0f88e17ae53611e6dd7f167bc38&btt=2&__refer=m.pg-redirect.com&or=static.pgsoft-games.com#amp=1" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 	<span class="elementor-button-content-wrapper">
 		<span class="elementor-button-icon elementor-align-icon-right">
 <i aria-hidden="true" class="fas fa-external-link-alt"></i>			</span>
